# tree-sitter-rsml

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar.ts  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
.github/workflows/: package-crates.yml  release.yml
bindings/c/: tree-sitter-rsml.pc.in
bindings/c/tree_sitter/: tree-sitter-rsml.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rsml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRsmlTests/: TreeSitterRsmlTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
