[package]
name = "tree-sitter-rsml"
description = "Rsml grammar for tree-sitter"
version = "0.1.4"
authors = [
  "Cameron Campbell",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rsml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/rbx-rsml-tree-sitter-py"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25.6"